feat: add auth, photos and albums view

--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag 'photos/index'%>
+<%= stylesheet_link_tag 'photos'%>
 <% provide(:title, "Feeds") %>
 <main id="main" class="row m-0">
     <%= render "layouts/sidebar" %>
