--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,29 +4,24 @@
     <title><%= full_title(yield(:title)) %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= render 'layouts/rails_default' %>
-    <!-- Fontawesome -->
-    <script
-        src="https://kit.fontawesome.com/1f91b0e9aa.js"
-        crossorigin="anonymous"
-    ></script>
-
-    <!-- Bootstrap -->
-    <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-        crossorigin="anonymous"
-    />
-    <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"
-    ></script>
+    
   </head>
 
   <body>
     
     <%= render 'layouts/header' %>
     <%= yield %>
+    <script >
+      document.addEventListener("DOMContentLoaded", () => {
+        const iconToggle = document.querySelector(".toggle");
+        const sidebar = document.querySelector(".sidebar");
+        const main = document.querySelector(".container_");
+
+        iconToggle.addEventListener("click", () => {
+          sidebar.classList.toggle("d-none");
+          sidebar.classList.toggle("col-4");
+        });
+      });
+    </script>
   </body>
 </html>
