--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,8 @@
         class="toggle fa-solid fa-bars d-block d-md-none mx-3 mt-1"
         role="button"
     ></i>
-    <h3>Fotobook</h3>
+    <h3><%= link_to "Fotobook", root_path %></h3>
+     
     <div class="search_input col-6 col-md-10">
         <input
         type="text"
