--- a/app/assets/stylesheets/auths/login.css
+++ b/app/assets/stylesheets/auths/login.css
@@ -5,8 +5,8 @@
   display: flex;
   align-items: start;
   justify-content: center;
-  margin-top: 5rem;
-  background-color: #a73131;
+  margin-top: 2rem;
+  background-color: #fff;
 }
 
 .form-signin {
