--- a/app/assets/stylesheets/auths/signup.css
+++ b/app/assets/stylesheets/auths/signup.css
@@ -1,5 +1,11 @@
 /* Main */
 #main {
+  width: 100%;
+  height: calc(100vh - var(--header-height));
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  margin-top: 2rem;
   background-color: #fff;
 }
 
