--- a/app/views/auths/login.html.erb
+++ b/app/views/auths/login.html.erb
@@ -1,3 +1,5 @@
+<%= stylesheet_link_tag "auths/login" %>
+<% provide(:title, "Login") %>
 <main id="main">
   <!-- Main content -->
   <div class="">
