--- a/app/views/auths/signup.html.erb
+++ b/app/views/auths/signup.html.erb
@@ -1,3 +1,5 @@
+<%= stylesheet_link_tag "auths/signup" %>
+<% provide(:title, "Sign up") %>
 <main id="main">
   <!-- Main content -->
   <div class="">
