--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -11,128 +11,46 @@
         </div>
 
         <div
-            class="d-flex flex-wrap flex-column flex-md-row align-self-stretch"
-            style="gap: 20px;"
+            class="feeds_container d-flex flex-wrap flex-column flex-md-row"
+            style="gap: 20px"
         >
-            <div class="card col-lg-5">
-            <div class="row g-0">
-                <div class="col-lg-6">
-                <div class="photo_container">
-                    <img
-                    src="https://s3-alpha-sig.figma.com/img/5ab1/4214/5fd468f24c4621db4ce5a2043a07c7dc?Expires=1719792000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=Hih3-vUWxePo-yG4r9-2Ppeg5mHKaYpfmHf1LwF-2tYJcnJRbnlp9TT-MaBNMBpAgsDpI1d~iYgxQpww3vmKse-dUWdsMusYNW6tKUauub4KhNu9wyJiWfNoBpXgVXmkp6VF1JkYwRZGtISjxcL~0kSafLqlaV5Jitre0yetuYTOnTqY3QYOpuTk0tn48xND9VJWaETcZ7DjkZVPKU4C3o95Bvi6kVj3mwF5CXkbhHcwFjxOaAkv4NOpInG-pWW8XRL1ce~lyRKWTkbXj~vKOOyqwAEo2a0yhSouv3ghUl6C5nHj6GfVkNvp9xu67-eEAlxbLSMKPVbLTWBSGaQymw__"
-                    class="img-fluid h-100"
-                    alt="photo"
-                    />
-                </div>
-                </div>
-                <div class="col-lg-6">
-                <div class="post_user_info">
-                    <div class="default_avatar">
-                    <span class="username_short">HN</span>
-                    </div>
-                    <span class="user_name">Hieu Nguyen</span>
-                </div>
+            <% @photos.each do |photo| %>
+                <div class="card col-lg-5">
+                    <div class="row g-0">
+                        <div class="col-lg-6">
+                        <div class="photo_container">
+                            <img
+                            src="<%= photo.image_url %>"
+                            class="img-fluid h-100"
+                            alt="photo"
+                            />
+                        </div>
+                        </div>
+                        <div class="col-lg-6">
+                        <div class="post_user_info">
+                            <div class="default_avatar">
+                            <span class="username_short">HN</span>
+                            </div>
+                            <span class="user_name">Hieu Nguyen</span>
+                        </div>
 
-                <div class="card-body" style="padding: 0.8rem">
-                    <h5 class="card-title">Nam tempor posuere faucibus</h5>
-                    <p class="card-text">
-                    Aliquam dictum nec massa ac consequat. Etiam dignissim
-                    tincidunt tellus sed vestibulum. Sed vitae vestibulum purus.
-                    Curabitur malesuada libero in nibh pretium, sed malesuada
-                    nisi feugiat.
-                    </p>
-                    <div class="post_createdAt">
-                    <i class="fa fa-heart" style="color: var(--main_color)"
-                        >&nbsp;<span>123</span></i
-                    >
-                    <small class="text-body-secondary"
-                        >4:56 pm 01/04/2018</small
-                    >
+                        <div class="card-body" style="padding: 0.8rem">
+                            <h5 class="card-title"><%= photo.title %></h5>
+                            <p class="card-text"><%= photo.description %></p>
+                            <div class="post_createdAt">
+                            <i class="fa fa-heart" style="color: var(--main_color)"
+                                >&nbsp;<span><%= photo.number_like %></span></i
+                            >
+                            <small class="text-body-secondary"
+                                ><%= photo.created_at %></small
+                            >
+                            </div>
+                        </div>
+                        </div>
                     </div>
                 </div>
-                </div>
-            </div>
-            </div>
-            <div class="card col-lg-5">
-            <div class="row g-0">
-                <div class="col-lg-6">
-                <div class="photo_container">
-                    <img
-                    src="https://s3-alpha-sig.figma.com/img/5ab1/4214/5fd468f24c4621db4ce5a2043a07c7dc?Expires=1719792000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=Hih3-vUWxePo-yG4r9-2Ppeg5mHKaYpfmHf1LwF-2tYJcnJRbnlp9TT-MaBNMBpAgsDpI1d~iYgxQpww3vmKse-dUWdsMusYNW6tKUauub4KhNu9wyJiWfNoBpXgVXmkp6VF1JkYwRZGtISjxcL~0kSafLqlaV5Jitre0yetuYTOnTqY3QYOpuTk0tn48xND9VJWaETcZ7DjkZVPKU4C3o95Bvi6kVj3mwF5CXkbhHcwFjxOaAkv4NOpInG-pWW8XRL1ce~lyRKWTkbXj~vKOOyqwAEo2a0yhSouv3ghUl6C5nHj6GfVkNvp9xu67-eEAlxbLSMKPVbLTWBSGaQymw__"
-                    class="img-fluid h-100"
-                    alt="photo"
-                    />
-                </div>
-                </div>
-                <div class="col-lg-6">
-                <div class="post_user_info">
-                    <div class="default_avatar">
-                    <span class="username_short">HN</span>
-                    </div>
-                    <span class="user_name">Hieu Nguyen</span>
-                </div>
-
-                <div class="card-body" style="padding: 0.8rem">
-                    <h5 class="card-title">Nam tempor posuere faucibus</h5>
-                    <p class="card-text">
-                    Aliquam dictum nec massa ac consequat. Etiam dignissim
-                    tincidunt tellus sed vestibulum. Sed vitae vestibulum purus.
-                    Curabitur malesuada libero in nibh pretium, sed malesuada
-                    nisi feugiat.
-                    </p>
-                    <div class="post_createdAt">
-                    <i class="fa fa-heart" style="color: var(--main_color)"
-                        >&nbsp;<span>123</span></i
-                    >
-                    <small class="text-body-secondary"
-                        >4:56 pm 01/04/2018</small
-                    >
-                    </div>
-                </div>
-                </div>
-            </div>
-            </div>
-            <div class="card col-lg-5">
-            <div class="row g-0">
-                <div class="col-md-6">
-                <div class="photo_container">
-                    <img
-                    src="https://s3-alpha-sig.figma.com/img/5ab1/4214/5fd468f24c4621db4ce5a2043a07c7dc?Expires=1719792000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=Hih3-vUWxePo-yG4r9-2Ppeg5mHKaYpfmHf1LwF-2tYJcnJRbnlp9TT-MaBNMBpAgsDpI1d~iYgxQpww3vmKse-dUWdsMusYNW6tKUauub4KhNu9wyJiWfNoBpXgVXmkp6VF1JkYwRZGtISjxcL~0kSafLqlaV5Jitre0yetuYTOnTqY3QYOpuTk0tn48xND9VJWaETcZ7DjkZVPKU4C3o95Bvi6kVj3mwF5CXkbhHcwFjxOaAkv4NOpInG-pWW8XRL1ce~lyRKWTkbXj~vKOOyqwAEo2a0yhSouv3ghUl6C5nHj6GfVkNvp9xu67-eEAlxbLSMKPVbLTWBSGaQymw__"
-                    class="img-fluid h-100"
-                    alt="photo"
-                    />
-                </div>
-                </div>
-                <div class="col-md-6">
-                <div class="post_user_info">
-                    <div class="default_avatar">
-                    <span class="username_short">HN</span>
-                    </div>
-                    <span class="user_name">Hieu Nguyen</span>
-                </div>
-
-                <div class="card-body" style="padding: 0.8rem">
-                    <h5 class="card-title">Nam tempor posuere faucibus</h5>
-                    <p class="card-text">
-                    Aliquam dictum nec massa ac consequat. Etiam dignissim
-                    tincidunt tellus sed vestibulum. Sed vitae vestibulum purus.
-                    Curabitur malesuada libero in nibh pretium, sed malesuada
-                    nisi feugiat.
-                    </p>
-                    <div class="post_createdAt">
-                    <i class="fa fa-heart" style="color: var(--main_color)"
-                        >&nbsp;<span>123</span></i
-                    >
-                    <small class="text-body-secondary"
-                        >4:56 pm 01/04/2018</small
-                    >
-                    </div>
-                </div>
-                </div>
-            </div>
-            </div>
+            <% end %>
         </div>
-
         <!-- Pagination -->
         <nav aria-label="">
             <ul class="pagination justify-content-center">
