--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -12,7 +12,14 @@
     <!-- Main content -->
     <div class="container_ col-12 col-md-8 m-md-0 justify-content-none">
         <div class="" style="width: 100%">
-            <h5 class="float-start fw-bold">New photo</h5>
+            <h5 class="float-start fw-bold">Edit photo</h5>
+            <button
+                type="button"
+                class="btn float-end display-block mb-3"
+                style="background-color: var(--main_color); color: white"
+            >
+                Back
+            </button> 
             <hr style="width: 100%; border: 2px solid #555" />
         </div>
 
@@ -50,7 +57,7 @@
                     style="max-width: 200px; height: 200px"
                 >
                     <img
-                    src="https://s3-alpha-sig.figma.com/img/5ab1/4214/5fd468f24c4621db4ce5a2043a07c7dc?Expires=1719792000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=Hih3-vUWxePo-yG4r9-2Ppeg5mHKaYpfmHf1LwF-2tYJcnJRbnlp9TT-MaBNMBpAgsDpI1d~iYgxQpww3vmKse-dUWdsMusYNW6tKUauub4KhNu9wyJiWfNoBpXgVXmkp6VF1JkYwRZGtISjxcL~0kSafLqlaV5Jitre0yetuYTOnTqY3QYOpuTk0tn48xND9VJWaETcZ7DjkZVPKU4C3o95Bvi6kVj3mwF5CXkbhHcwFjxOaAkv4NOpInG-pWW8XRL1ce~lyRKWTkbXj~vKOOyqwAEo2a0yhSouv3ghUl6C5nHj6GfVkNvp9xu67-eEAlxbLSMKPVbLTWBSGaQymw__"
+                    src="https://media.istockphoto.com/id/1401770465/vi/anh/kh%C3%A1i-ni%E1%BB%87m-gi%E1%BA%A3m-chi-ph%C3%AD.webp?s=1024x1024&w=is&k=20&c=7YIGkJT2p4zQ23rd8RJiHtTLl0qSVMIB__6-2RFyDSg="
                     class="card-img"
                     style="width: 100%; height: 100%; object-fit: cover"
                     alt="Stony Beach"
@@ -73,7 +80,7 @@
                     style="max-width: 200px; height: 200px"
                 >
                     <img
-                    src="https://s3-alpha-sig.figma.com/img/5ab1/4214/5fd468f24c4621db4ce5a2043a07c7dc?Expires=1719792000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=Hih3-vUWxePo-yG4r9-2Ppeg5mHKaYpfmHf1LwF-2tYJcnJRbnlp9TT-MaBNMBpAgsDpI1d~iYgxQpww3vmKse-dUWdsMusYNW6tKUauub4KhNu9wyJiWfNoBpXgVXmkp6VF1JkYwRZGtISjxcL~0kSafLqlaV5Jitre0yetuYTOnTqY3QYOpuTk0tn48xND9VJWaETcZ7DjkZVPKU4C3o95Bvi6kVj3mwF5CXkbhHcwFjxOaAkv4NOpInG-pWW8XRL1ce~lyRKWTkbXj~vKOOyqwAEo2a0yhSouv3ghUl6C5nHj6GfVkNvp9xu67-eEAlxbLSMKPVbLTWBSGaQymw__"
+                    src="https://media.istockphoto.com/id/1401770465/vi/anh/kh%C3%A1i-ni%E1%BB%87m-gi%E1%BA%A3m-chi-ph%C3%AD.webp?s=1024x1024&w=is&k=20&c=7YIGkJT2p4zQ23rd8RJiHtTLl0qSVMIB__6-2RFyDSg="
                     class="card-img"
                     style="width: 100%; height: 100%; object-fit: cover"
                     alt="Stony Beach"
@@ -117,6 +124,9 @@
             <div>
                 <button class="btn btn-success" style="margin-right: 3rem">
                     Save
+                </button>
+                <button class="btn btn-danger">
+                    <i class="fa-solid fa-trash-can"></i> Delete
                 </button>
             </div>
         </form>
