--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -1,8 +1,6 @@
 <main id="main" class="row m-0">
     <!-- Sidebar -->
-    <div
-    class="sidebar d-none d-md-flex flex-column align-items-center col-2"
-    >
+    <div class="sidebar d-none d-md-flex flex-column align-items-center col-2">
         <ul class="d-flex flex-column align-items-start w-auto">
             <li><a href="">Feeds</a></li>
             <li><a href="">My Photos</a></li>
@@ -50,7 +48,7 @@
                     style="max-width: 200px; height: 200px"
                 >
                     <img
-                    src="https://s3-alpha-sig.figma.com/img/5ab1/4214/5fd468f24c4621db4ce5a2043a07c7dc?Expires=1719792000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=Hih3-vUWxePo-yG4r9-2Ppeg5mHKaYpfmHf1LwF-2tYJcnJRbnlp9TT-MaBNMBpAgsDpI1d~iYgxQpww3vmKse-dUWdsMusYNW6tKUauub4KhNu9wyJiWfNoBpXgVXmkp6VF1JkYwRZGtISjxcL~0kSafLqlaV5Jitre0yetuYTOnTqY3QYOpuTk0tn48xND9VJWaETcZ7DjkZVPKU4C3o95Bvi6kVj3mwF5CXkbhHcwFjxOaAkv4NOpInG-pWW8XRL1ce~lyRKWTkbXj~vKOOyqwAEo2a0yhSouv3ghUl6C5nHj6GfVkNvp9xu67-eEAlxbLSMKPVbLTWBSGaQymw__"
+                    src="https://i.ibb.co/gZyrfvQ/Screenshot-from-2024-06-26-21-10-02.png"
                     class="card-img"
                     style="width: 100%; height: 100%; object-fit: cover"
                     alt="Stony Beach"
@@ -73,7 +71,7 @@
                     style="max-width: 200px; height: 200px"
                 >
                     <img
-                    src="https://s3-alpha-sig.figma.com/img/5ab1/4214/5fd468f24c4621db4ce5a2043a07c7dc?Expires=1719792000&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=Hih3-vUWxePo-yG4r9-2Ppeg5mHKaYpfmHf1LwF-2tYJcnJRbnlp9TT-MaBNMBpAgsDpI1d~iYgxQpww3vmKse-dUWdsMusYNW6tKUauub4KhNu9wyJiWfNoBpXgVXmkp6VF1JkYwRZGtISjxcL~0kSafLqlaV5Jitre0yetuYTOnTqY3QYOpuTk0tn48xND9VJWaETcZ7DjkZVPKU4C3o95Bvi6kVj3mwF5CXkbhHcwFjxOaAkv4NOpInG-pWW8XRL1ce~lyRKWTkbXj~vKOOyqwAEo2a0yhSouv3ghUl6C5nHj6GfVkNvp9xu67-eEAlxbLSMKPVbLTWBSGaQymw__"
+                    src="https://media.istockphoto.com/id/1401770465/vi/anh/kh%C3%A1i-ni%E1%BB%87m-gi%E1%BA%A3m-chi-ph%C3%AD.webp?s=1024x1024&w=is&k=20&c=7YIGkJT2p4zQ23rd8RJiHtTLl0qSVMIB__6-2RFyDSg="
                     class="card-img"
                     style="width: 100%; height: 100%; object-fit: cover"
                     alt="Stony Beach"
