--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,66 +1,73 @@
 <header id="header" class="px-0 px-md-5">
     <div class="header_logo col-10 col-md-6">
-    <i
-        class="toggle fa-solid fa-bars d-block d-md-none mx-3 mt-1"
-        role="button"
-    ></i>
-    <h3><%= link_to "Fotobook", root_path %></h3>
+        <i
+            class="toggle fa-solid fa-bars d-block d-md-none mx-3 mt-1"
+            role="button"
+        ></i>
+        <h3><%= link_to "Fotobook", root_path %></h3>
      
-    <div class="search_input col-6 col-md-10">
-        <input
-        type="text"
-        placeholder="Search Photo / Album"
-        class="form-control"
-        />
-    </div>
+        <div class="search_input col-6 col-md-10">
+            <input
+            type="text"
+            placeholder="Search Photo / Album"
+            class="form-control"
+            />
+        </div>
     </div>
 
     <div
-    class="auth col-2 col-md-4 d-flex align-items-center justify-content-evenly"
+        class="auth col-2 col-md-4 d-flex align-items-center justify-content-evenly"
     >
-    <div class="post_user_info">
-        <!-- <div class="default_avatar">
-        <span class="username_short">HN</span>
-        </div> -->
+        <% if user_signed_in? %>
+            <div class="post_user_info">
+                    <div class="dropdown">
+                        <div class="default_avatar">
+                            <span class="username_short">HN</span>
+                        </div>
 
-        <div class="dropdown">
-        <div class="default_avatar">
-            <span class="username_short">HN</span>
-        </div>
+                        <ul
+                            class="dropdown-menu dropdown-menu-none dropdown-menu-lg-start d-md-none bg-light"
+                            aria-labelledby="dropdownMenuButton1"
+                        >
+                            <li class="px-2">
+                                <a
+                                    class="d-block mx-0"
+                                    href="#"
+                                    style="color: var(--main_color)"
+                                    >Profile</a
+                                >
+                            </li>
+                            <li class="px-2">
+                                <a
+                                    class="d-block mx-0"
+                                    href="#"
+                                    style="color: var(--main_color)"
+                                    >Logout</a
+                                >
+                            </li>
+                        </ul>
+                    </div>
 
-        <ul
-            class="dropdown-menu dropdown-menu-none dropdown-menu-lg-start d-md-none bg-light"
-            aria-labelledby="dropdownMenuButton1"
-        >
-            <li class="px-2">
-            <a
-                class="d-block mx-0"
-                href="#"
-                style="color: var(--main_color)"
-                >Profile</a
-            >
-            </li>
-            <li class="px-2">
-            <a
-                class="d-block mx-0"
-                href="#"
-                style="color: var(--main_color)"
-                >Logout</a
-            >
-            </li>
-        </ul>
-        </div>
-
-        <span class="user_name d-none d-md-block">Hieu Nguyen</span>
-        <span
-        class="user_name d-block d-md-none dropdown-toggle"
-        id="dropdownMenuButton1"
-        data-bs-toggle="dropdown"
-        aria-expanded="false"
-        role="button"
-        >
-        </span>
-    </div>
-    <a href="login.php" class="d-none d-md-block">Login</a>
+                    <span class="user_name d-none d-md-block">Hieu Nguyen</span>
+                    <span
+                        class="user_name d-block d-md-none dropdown-toggle"
+                        id="dropdownMenuButton1"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="false"
+                        role="button"
+                    >
+                    </span>
+            </div>
+            <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "d-none d-md-block", style: "color: #fff;
+                                        background-color: transparent;
+                                        font-weight: bold;
+                                        font-size: 1rem;
+                                        padding: 5px 10px;
+                                        border-radius: 5px;
+                                        margin-left: 10px;
+                                        border: none;" %>
+        <% else %>
+            <a href="login.cc" class="auth_btn d-none d-md-block">Login</a>
+        <% end %>
     </div>
 </header>
