--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -2,7 +2,6 @@
 <% provide(:title, "Feeds") %>
 <main id="main" class="row m-0">
     <%= render "layouts/sidebar" %>
-
     <!-- Main content -->
     <div class="container_ col-12 col-md-8 m-md-0 justify-content-none">
         <div class="btn-group mb-3" role="group" aria-label="Basic example">
@@ -14,13 +13,17 @@
             class="feeds_container d-flex flex-wrap flex-column flex-md-row"
             style="gap: 20px"
         >
-            <% @photos.each do |photo| %>
+            <%
+=begin%>
+ <% @photos.each do |photo| %> 
+<%
+=end%>
                 <div class="card col-lg-5">
                     <div class="row g-0">
                         <div class="col-lg-6">
                         <div class="photo_container">
                             <img
-                            src="<%= photo.image_url %>"
+                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjzC2JyZDZ_RaWf0qp11K0lcvB6b6kYNMoqtZAQ9hiPZ4cTIOB"
                             class="img-fluid h-100"
                             alt="photo"
                             />
@@ -35,21 +38,25 @@
                         </div>
 
                         <div class="card-body" style="padding: 0.8rem">
-                            <h5 class="card-title"><%= photo.title %></h5>
-                            <p class="card-text"><%= photo.description %></p>
+                            <h5 class="card-title">vankha</h5>
+                            <p class="card-text">"check here"</p>
                             <div class="post_createdAt">
                             <i class="fa fa-heart" style="color: var(--main_color)"
-                                >&nbsp;<span><%= photo.number_like %></span></i
+                                >&nbsp;<span>0</span></i
                             >
                             <small class="text-body-secondary"
-                                ><%= photo.created_at %></small
+                                ></small
                             >
                             </div>
                         </div>
                         </div>
                     </div>
                 </div>
-            <% end %>
+            <%
+=begin%>
+ <% end %> 
+<%
+=end%>
         </div>
         <!-- Pagination -->
         <nav aria-label="">
