--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -67,7 +67,7 @@
                                         margin-left: 10px;
                                         border: none;" %>
         <% else %>
-            <a href="login.cc" class="auth_btn d-none d-md-block">Login</a>
+            <a href="/users/sign_in" class="auth_btn d-none d-md-block">Login</a>
         <% end %>
     </div>
 </header>
