--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -13,67 +13,65 @@
             class="feeds_container d-flex flex-wrap flex-column flex-md-row"
             style="gap: 20px"
         >
-            <%
-=begin%>
- <% @photos.each do |photo| %> 
-<%
-=end%>
-                <div class="card col-lg-5">
-                    <div class="row g-0">
-                        <div class="col-lg-6">
-                        <div class="photo_container">
-                            <img
-                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjzC2JyZDZ_RaWf0qp11K0lcvB6b6kYNMoqtZAQ9hiPZ4cTIOB"
-                            class="img-fluid h-100"
-                            alt="photo"
-                            />
-                        </div>
-                        </div>
-                        <div class="col-lg-6">
-                        <div class="post_user_info">
-                            <div class="default_avatar">
-                            <span class="username_short">HN</span>
+            <% if !@photos || @photos.length == 0 %>
+                <h2>No photo </h2>
+            <% else %>
+                <% @photos.each do |photo| %> 
+                    <div class="card col-lg-5">
+                        <div class="row g-0">
+                            <div class="col-lg-6">
+                            <div class="photo_container">
+                                <img
+                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQjzC2JyZDZ_RaWf0qp11K0lcvB6b6kYNMoqtZAQ9hiPZ4cTIOB"
+                                class="img-fluid h-100"
+                                alt="photo"
+                                />
                             </div>
-                            <span class="user_name">Hieu Nguyen</span>
-                        </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="post_user_info">
+                                    <div class="default_avatar">
+                                        <span class="username_short"><%= current_user.first_name[0] + current_user.last_name[0] %></span>
+                                    </div>
+                                    <span class="user_name"><%= current_user.first_name + current_user.last_name %></span>
+                                </div>
 
-                        <div class="card-body" style="padding: 0.8rem">
-                            <h5 class="card-title">vankha</h5>
-                            <p class="card-text">"check here"</p>
-                            <div class="post_createdAt">
-                            <i class="fa fa-heart" style="color: var(--main_color)"
-                                >&nbsp;<span>0</span></i
-                            >
-                            <small class="text-body-secondary"
-                                ></small
-                            >
+                                <div class="card-body" style="padding: 0.8rem">
+                                    <h5 class="card-title"><%= photo.title %></h5>
+                                    <p class="card-text"><%= photo.description %></p>
+                                </div>
+                                <div class="post_createdAt">
+                                    <i class="fa fa-heart" style="color: var(--main_color)">
+                                        &nbsp;<span><%= photo.number_like %></span>
+                                    </i>
+                                    <small class="text-body-secondary">
+                                        <%= photo.created_at %>
+                                    </small>
+                                </div>
                             </div>
-                        </div>
                         </div>
                     </div>
-                </div>
-            <%
-=begin%>
- <% end %> 
-<%
-=end%>
+                <% end %>
+            <% end %>
         </div>
         <!-- Pagination -->
-        <nav aria-label="">
-            <ul class="pagination justify-content-center">
-            <li class="page-item disabled">
-                <a class="page-link">Previous</a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item active">
-                <a class="page-link" href="#">2</a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-                <a class="page-link" href="#">Next</a>
-            </li>
-            </ul>
-        </nav>
+        <% if !(@photo || @photos.length == 0) %>
+            <nav aria-label="">
+                <ul class="pagination justify-content-center">
+                <li class="page-item disabled">
+                    <a class="page-link">Previous</a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item active">
+                    <a class="page-link" href="#">2</a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item">
+                    <a class="page-link" href="#">Next</a>
+                </li>
+                </ul>
+            </nav>
+        <% end %>
     </div>
 
     <div class="col-2"></div>
