--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -1,13 +1,6 @@
 <main id="main" class="row m-0">
     <!-- Sidebar -->
-    <div
-    class="sidebar d-none d-md-flex flex-column align-items-center col-2"
-    >
-        <ul class="d-flex flex-column align-items-start w-auto">
-            <li><a href="">Feeds</a></li>
-            <li><a href="">My Photos</a></li>
-        </ul>
-    </div>
+    <%= render "layouts/sidebar" %>
 
     <!-- Main content -->
     <div class="container_ col-12 col-md-8 m-md-0 justify-content-none">
