feat: add pagination for feeds and style ui

--- a/app/assets/stylesheets/albums/new.css
+++ b/app/assets/stylesheets/albums/new.css
@@ -1,5 +1,5 @@
 /* Main */
-#main .container_ {
+/* #main .container_ {
   height: 100%;
   background-color: #ffffff;
   display: flex;
@@ -36,4 +36,4 @@
 
 #main .container_ select option {
   font-weight: bold;
-}
+} */
