--- a/app/assets/stylesheets/albums/index.css
+++ b/app/assets/stylesheets/albums/index.css
@@ -1,5 +1,15 @@
+#main_album {
+  width: 100%;
+  height: calc(100vh - var(--header-height));
+  display: flex;
+  align-items: start;
+  /* justify-content: center; */
+  margin-top: 5rem;
+  background-color: #f8f8f8;
+  padding: 0.8rem 0 0 0;
+}
 
-#main .container_ {
+#main_album .container_ {
   height: 100%;
   background-color: #ffffff;
   display: flex;
@@ -11,102 +21,109 @@
   padding: 1rem 2rem;
 }
 
-#main .container_ .feeds_container {
-  height: 80%;
+#main_album .container_ .feeds_container {
+  width: 100%;
+  flex-grow: 1;
+  /* height: 80%; */
   align-items: start;
+  justify-content: start;
 }
 
 /* Post */
-#main .container_ .card {
+#main_album .container_ .card {
+  margin: 0 1rem;
   border: none;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
   padding: 0;
   background-color: #f8f8f8;
   line-height: 1rem;
-  /* flex-grow: 1; */
-  /* max-width: 48%; */
+  width: 45%;
 }
 
 @media screen and (max-width: 992px) {
-  #main .container_ .card {
-    max-width: 100%;
+  #main_album .container_ .card {
+    width: 100%;
   }
-  #main .container_ .feeds_container {
+  #main_album .container_ .feeds_container {
     height: auto;
+  }
+  #main_album .container_ .img-fluid {
+    width: 100%;
   }
 }
 
-#main .container_ .photo_container {
-  height: 100%;
-  /* height: 80%;
-      padding: 2rem; */
+@media screen and (min-width: 1024px) {
+  #main_album .container_ .card-body {
+    height: 57%;
+  }
 }
-#main .container_ .img-fluid {
-  width: 100%;
+
+#main_album .container_ .photo_container {
   height: 100%;
-  object-fit: cover;
-  border-top-left-radius: 0.375rem;
-  border-bottom-left-radius: 0.375rem;
+  padding: 1rem;
 }
 
 /* For album */
-/* .photo_container {
+#main_album .photo_container {
   position: relative;
-  width: 250px;
 }
 
-.photo_container img {
-  width: 80%;
+#main_album .container_ .img-fluid {
+  width: 85%;
+  height: 85%;
+  object-fit: cover;
   position: absolute;
   transition: transform 0.3s, box-shadow 0.3s;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  margin: auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
-.photo_container img:nth-child(1) {
+#main_album .photo_container img:nth-child(1) {
   transform: rotate(10deg);
   z-index: 1;
 }
 
-.photo_container img:nth-child(2) {
+#main_album .photo_container img:nth-child(2) {
   transform: rotate(5deg);
   z-index: 2;
 }
 
-.photo_container img:nth-child(3) {
+#main_album .photo_container img:nth-child(3) {
   transform: rotate(0deg);
   z-index: 3;
-} */
+}
 
-#main .container_ .post_user_info {
+#main_album .container_ .post_user_info {
   display: flex;
   align-items: center;
   gap: 0.6rem;
-  padding-top: 0.8rem;
-  padding-right: 0.9rem;
 }
-#main .container_ .default_avatar {
+#main_album .container_ .default_avatar {
   width: 2.5rem;
   height: 2.5rem;
   border-radius: 50%;
   background-color: var(--main_color);
   text-align: center;
   color: #fff;
-  margin-left: 1rem;
 }
-#main .container_ .username_short {
+#main_album .container_ .username_short {
   font-size: 1rem;
   line-height: 2.5rem;
 }
-#main .container_ .user_name {
+#main_album .container_ .user_name {
   color: var(--main_color);
   font-weight: bold;
 }
-#main .container_ .card-title {
+#main_album .container_ .card-title {
   font-size: 0.9rem;
   font-weight: bold;
   background-color: #f8f8f8;
 }
-#main .container_ .card-text {
+#main_album .container_ .card-text {
   font-size: 0.9rem;
   height: 100%;
   width: 100%;
@@ -117,17 +134,23 @@
   background: #fff;
   background-color: #f8f8f8;
 }
-#main .container_ .post_createdAt {
+
+#main_album .container_ .card-body {
+  padding: 0.2rem;
+}
+
+#main_album .container_ .post_createdAt {
   display: flex;
   align-items: center;
   justify-content: space-between;
   font-size: 0.8rem;
   margin-top: 2rem;
+  padding: 0 0.3rem;
 }
-#main .container_ .post_createdAt i {
+#main_album .container_ .post_createdAt i {
   color: #e0e0e0;
 }
-#main .container_ .post_createdAt i span {
+#main_album .container_ .post_createdAt i span {
   color: var(--main_color);
 }
 
