--- a/app/assets/stylesheets/photos/index.css
+++ b/app/assets/stylesheets/photos/index.css
@@ -13,7 +13,7 @@
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   gap: 0.8rem;
 
@@ -21,25 +21,39 @@
 }
 
 #main .container_ .feeds_container {
-  height: 80%;
+  width: 100%;
+  flex-grow: 1;
+  /* height: 80%; */
   align-items: start;
+  justify-content: start;
 }
 
 /* Post */
-#main .container_ .card {
+#main .container_ .card.photo {
+  margin: 0 1rem;
   border: none;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
   padding: 0;
   background-color: #f8f8f8;
   line-height: 1rem;
+  width: 45%;
 }
 
 @media screen and (max-width: 992px) {
-  #main .container_ .card {
-    max-width: 100%;
+  #main .container_ .card.photo {
+    width: 100%;
   }
   #main .container_ .feeds_container {
     height: auto;
+  }
+  #main .container_ .img-fluid {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  #main .container_ .card-body {
+    height: 55%; 
   }
 }
 
@@ -49,8 +63,6 @@
     padding: 2rem; */
 }
 #main .container_ .img-fluid {
-  width: 100%;
-  height: 100%;
   object-fit: cover;
   border-top-left-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
@@ -88,8 +100,6 @@
   display: flex;
   align-items: center;
   gap: 0.6rem;
-  padding-top: 0.8rem;
-  padding-right: 0.9rem;
 }
 #main .container_ .default_avatar {
   width: 2.5rem;
@@ -98,7 +108,6 @@
   background-color: var(--main_color);
   text-align: center;
   color: #fff;
-  margin-left: 1rem;
 }
 #main .container_ .username_short {
   font-size: 1rem;
@@ -124,14 +133,18 @@
   background: #fff;
   background-color: #f8f8f8;
 }
+
+#main .container_ .card-body {
+  padding: 0.2rem;
+}
+
 #main .container_ .post_createdAt {
   display: flex;
   align-items: center;
   justify-content: space-between;
   font-size: 0.8rem;
   margin-top: 2rem;
-  padding: 0 0.8rem;
-  align-self: self-end;
+  padding: 0 0.3rem;
 }
 #main .container_ .post_createdAt i {
   color: #e0e0e0;
