--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -1,146 +1,19 @@
 <%= stylesheet_link_tag 'albums/index'%>
 <% provide(:title, "Feeds") %>
-<main id="main" class="row m-0">
+<main id="main_album" class="row m-0">
     <%= render "layouts/sidebar" %>
 
     <!-- Main content -->
     <div class="container_ col-12 col-md-8 m-md-0 justify-content-none">
-        <div class="btn-group mb-3" role="group" aria-label="Basic example">
-            <%= link_to "PHOTO", root_path, class:"btn #{ request.path == root_path ? 'active_' : ''} " %>
-            <%= link_to "ALBUM", albums_path, class:"btn #{ request.path == albums_path ? 'active_' : ''}" %>
-        </div>
+        <%= render "shared/feed_nav" %>
 
         <div
-          class="d-flex flex-wrap flex-column flex-md-row align-self-stretch"
+          class="feeds_container d-flex flex-wrap flex-column flex-md-row"
           style="gap: 20px;"
         >
-          <div class="card col-lg-5">
-            <div class="row g-0">
-              <div class="col-lg-6">
-                <div class="photo_container">
-                  <img
-                    src="https://media.istockphoto.com/id/1388420740/vi/anh/net-zero-v%C3%A0-carbon-neutral-concepts-net-zero-emissions-goals-m%E1%BB%99t-chi%E1%BA%BFn-l%C6%B0%E1%BB%A3c-d%C3%A0i-h%E1%BA%A1n-trung-l%E1%BA%ADp.jpg?s=1024x1024&w=is&k=20&c=kvm744AqJqKq0hf1csdKSOCkjwyspBcV1h6gcBzBNns="
-                    class="img-fluid h-100"
-                    alt="photo"
-                  />
-                  <img
-                    src="https://media.istockphoto.com/id/1388420740/vi/anh/net-zero-v%C3%A0-carbon-neutral-concepts-net-zero-emissions-goals-m%E1%BB%99t-chi%E1%BA%BFn-l%C6%B0%E1%BB%A3c-d%C3%A0i-h%E1%BA%A1n-trung-l%E1%BA%ADp.jpg?s=1024x1024&w=is&k=20&c=kvm744AqJqKq0hf1csdKSOCkjwyspBcV1h6gcBzBNns="
-                    class="img-fluid h-100"
-                    alt="photo"
-                  />
-                  <img
-                    src="https://media.istockphoto.com/id/1388420740/vi/anh/net-zero-v%C3%A0-carbon-neutral-concepts-net-zero-emissions-goals-m%E1%BB%99t-chi%E1%BA%BFn-l%C6%B0%E1%BB%A3c-d%C3%A0i-h%E1%BA%A1n-trung-l%E1%BA%ADp.jpg?s=1024x1024&w=is&k=20&c=kvm744AqJqKq0hf1csdKSOCkjwyspBcV1h6gcBzBNns="
-                    class="img-fluid h-100"
-                    alt="photo"
-                  />
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="post_user_info">
-                  <div class="default_avatar">
-                    <span class="username_short">HN</span>
-                  </div>
-                  <span class="user_name">Hieu Nguyen</span>
-                </div>
-
-                <div class="card-body" style="padding: 0.8rem">
-                  <h5 class="card-title">Nam tempor posuere faucibus</h5>
-                  <p class="card-text">
-                    Aliquam dictum nec massa ac consequat. Etiam dignissim
-                    tincidunt tellus sed vestibulum. Sed vitae vestibulum purus.
-                    Curabitur malesuada libero in nibh pretium, sed malesuada
-                    nisi feugiat.
-                  </p>
-                  <div class="post_createdAt">
-                    <i class="fa fa-heart" style="color: var(--main_color)"
-                      >&nbsp;<span>123</span></i
-                    >
-                    <small class="text-body-secondary"
-                      >4:56 pm 01/04/2018</small
-                    >
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="card col-lg-5">
-            <div class="row g-0">
-              <div class="col-lg-6">
-                <div class="photo_container">
-                  <img
-                    src="https://media.istockphoto.com/id/1388420740/vi/anh/net-zero-v%C3%A0-carbon-neutral-concepts-net-zero-emissions-goals-m%E1%BB%99t-chi%E1%BA%BFn-l%C6%B0%E1%BB%A3c-d%C3%A0i-h%E1%BA%A1n-trung-l%E1%BA%ADp.jpg?s=1024x1024&w=is&k=20&c=kvm744AqJqKq0hf1csdKSOCkjwyspBcV1h6gcBzBNns="
-                    class="img-fluid h-100"
-                    alt="photo"
-                  />
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="post_user_info">
-                  <div class="default_avatar">
-                    <span class="username_short">HN</span>
-                  </div>
-                  <span class="user_name">Hieu Nguyen</span>
-                </div>
-
-                <div class="card-body" style="padding: 0.8rem">
-                  <h5 class="card-title">Nam tempor posuere faucibus</h5>
-                  <p class="card-text">
-                    Aliquam dictum nec massa ac consequat. Etiam dignissim
-                    tincidunt tellus sed vestibulum. Sed vitae vestibulum purus.
-                    Curabitur malesuada libero in nibh pretium, sed malesuada
-                    nisi feugiat.
-                  </p>
-                  <div class="post_createdAt">
-                    <i class="fa fa-heart" style="color: var(--main_color)"
-                      >&nbsp;<span>123</span></i
-                    >
-                    <small class="text-body-secondary"
-                      >4:56 pm 01/04/2018</small
-                    >
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="card col-lg-5">
-            <div class="row g-0">
-              <div class="col-md-6">
-                <div class="photo_container">
-                  <img
-                    src="https://media.istockphoto.com/id/1388420740/vi/anh/net-zero-v%C3%A0-carbon-neutral-concepts-net-zero-emissions-goals-m%E1%BB%99t-chi%E1%BA%BFn-l%C6%B0%E1%BB%A3c-d%C3%A0i-h%E1%BA%A1n-trung-l%E1%BA%ADp.jpg?s=1024x1024&w=is&k=20&c=kvm744AqJqKq0hf1csdKSOCkjwyspBcV1h6gcBzBNns="
-                    class="img-fluid h-100"
-                    alt="photo"
-                  />
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="post_user_info">
-                  <div class="default_avatar">
-                    <span class="username_short">HN</span>
-                  </div>
-                  <span class="user_name">Hieu Nguyen</span>
-                </div>
-
-                <div class="card-body" style="padding: 0.8rem">
-                  <h5 class="card-title">Nam tempor posuere faucibus</h5>
-                  <p class="card-text">
-                    Aliquam dictum nec massa ac consequat. Etiam dignissim
-                    tincidunt tellus sed vestibulum. Sed vitae vestibulum purus.
-                    Curabitur malesuada libero in nibh pretium, sed malesuada
-                    nisi feugiat.
-                  </p>
-                  <div class="post_createdAt">
-                    <i class="fa fa-heart" style="color: var(--main_color)"
-                      >&nbsp;<span>123</span></i
-                    >
-                    <small class="text-body-secondary"
-                      >4:56 pm 01/04/2018</small
-                    >
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          <%= render "card" %>
+          <%= render "card" %>
+          <%= render "card" %>
         </div>
     </div>
     
