--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -6,7 +6,7 @@
     <ul class="d-flex flex-column align-items-start w-auto">
         <li>
             <a href="<%= root_path %>"
-                class="<%= 'is_active' if current_page?(root_path) %>"
+                class="<%= 'is_active' if current_page?(root_path) || request.path == '/albums' %>"
             >
                 Feeds
             </a>
