style: photo and album modal

--- a/app/views/albums/_card.html.erb
+++ b/app/views/albums/_card.html.erb
@@ -1,4 +1,5 @@
-<div class="card">
+<div class="card" data-bs-toggle="modal"
+      data-bs-target="#put_album_id">
     <div class="row g-0">
         <div class="col-lg-6">
         <div class="photo_container">
