--- a/app/assets/stylesheets/photos/index.css
+++ b/app/assets/stylesheets/photos/index.css
@@ -30,6 +30,7 @@
 
 /* Post */
 #main .container_ .card.photo {
+  text-decoration: none;
   margin: 0 1rem;
   border: none;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);
@@ -67,34 +68,6 @@
   border-top-left-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
 }
-
-/* For album */
-/* .photo_container {
-    position: relative;
-    width: 300px; 
-    }
-
-    .photo_container img {
-    width: 80%;
-    position: absolute;
-    transition: transform 0.3s, box-shadow 0.3s;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-
-    .photo_container img:nth-child(1) {
-    transform: rotate(10deg);
-    z-index: 1;
-    }
-
-    .photo_container img:nth-child(2) {
-    transform: rotate(5deg);
-    z-index: 2;
-    }
-
-    .photo_container img:nth-child(3) {
-    transform: rotate(0deg);
-    z-index: 3;
-    } */
 
 #main .container_ .post_user_info {
   display: flex;
