--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -14,6 +14,7 @@
           <%= render "card" %>
           <%= render "card" %>
           <%= render "card" %>
+          <%= render "shared/modal_album" %>
         </div>
     </div>
     
