--- a/app/views/photos/_card.html.erb
+++ b/app/views/photos/_card.html.erb
@@ -1,4 +1,5 @@
-<div class="card photo">
+<a class="card photo" data-bs-toggle="modal"
+      data-bs-target="#<%= photo.id %>">
     <div class="row g-0">
         <div class="col-lg-6">
             <div class="photo_container">
@@ -31,4 +32,4 @@
             </div>
         </div>
     </div>
-</div>
+</a>
